--- a/Moonlight/locales/en.json
+++ b/Moonlight/locales/en.json
@@ -21,14 +21,17 @@
             "configured" : "Application is configured"
         },
         "user" : {
-            "no_one"  : "There are no users",
             "created" : "User successfully created"
         }
     },
     "warning"  : {},
     "errors"   : {
         "user" : {
-            "already_exist" : "User with name `{username}` already exists"
+            "no_one" : "There are no users",
+            "already_exist" : "User with name `{username}` already exists",
+            "need_create_user" : "First you need to create user",
+            "cant_find": "Could not find user named `{username}`",
+            "invalid_password": "Incorrect password"
         }
     },
     "permissions" : {
