--- a/Moonlight/locales/en.json
+++ b/Moonlight/locales/en.json
@@ -41,7 +41,8 @@
     "warnings"  : {
         "moonfile" : {
             "undefined_command" : "During the Moonfile parsing, an unknown `{command}` command was detected, it was skipped.",
-            "no_port_app"       : "[bold white]APP[/bold white]: You did not specify [white]`port`[/white]. The default value is [bold white]{default_port}[/bold white]"
+            "no_port_app"       : "[white]APP[/white]: You did not specify [white]`port`[/white]. The default value is [white]{default_port}[/white]",
+            "ignored"           : "Moonfile ignored. Exiting..."
         }
     },
     "errors"   : {
@@ -60,11 +61,11 @@
             "not_author"    : "You are not the creator of `{database_name}`. \nOnly the creator can delete the database."
         },
         "moonfile" : {
-            "no_host_app"           : "[bold white]APP[/bold white]: requires two arguments ([white]`port`[/white] is optional, default: [bold white]{default_port}[/bold white]). You have not passed [bold white]`host`[/bold white]",
-            "params_create_user"    : "[bold white]CREATE_USER[/bold white]: requires three arguments ([white]`permissions`[/white], [white]`username`[/white], [white]`password`[/white]). You passed [bold white]{length_args}[/bold white]",
-            "undefined_logger_type" : "[bold white]LOG[/bold white]: accepts only [bold white]`{default_loggers}`[/bold white] loggers. Undefined logger was found [bold white]{undefined_logger}[/bold white]",
-            "undefined_user"        : "[bold white]DATABASE[/bold white]: first you need to create user. Undefined user was found [bold white]{undefined_user}[/bold white]",
-            "no_params_database"    : "[bold white]DATABASE[/bold white]: requires two arguments ([white]`author`[/white] is optional, default: [bold white]{default_author}[/bold white]). You have not passed [bold white]`database name`[/bold white]"
+            "no_host_app"           : "[white]APP[/white]: requires two arguments ([white]`port`[/white] is optional, default: [white]{default_port}[/white]). You have not passed [white]`host`[/white]",
+            "params_create_user"    : "[white]CREATE_USER[/white]: requires three arguments ([white]`permissions`[/white], [white]`username`[/white], [white]`password`[/white]). You passed [white]{length_args}[/white]",
+            "undefined_logger_type" : "[white]LOG[/white]: accepts only [white]`{default_loggers}`[/white] loggers. Undefined logger was found [white]{undefined_logger}[/white]",
+            "undefined_user"        : "[white]DATABASE[/white]: first you need to create user. Undefined user was found [white]{undefined_user}[/white]",
+            "no_params_database"    : "[white]DATABASE[/white]: requires two arguments ([white]`author`[/white] is optional, default: [white]{default_author}[/white]). You have not passed [white]`database name`[/white]"
         }
     },
     "tables"        : {
