--- a/Moonlight/locales/en.json
+++ b/Moonlight/locales/en.json
@@ -92,26 +92,24 @@
     },
     "loggers" : {
         "info" : {
-            "database_connect" : "Moonlight: Database connected",
-            "database_drop"    : "DROP: Database dropped"
+            "database_connect" : "{name}: Database connected",
+            "database_drop"    : "{operation}: Database dropped"
         },
         "success" : {
-            "pushed"  : "PUSH: {data}",
-            "get_all" : "ALL: all elements have been returned",
-            "get"     : "GET: {result}",
-            "updated" : "UPDATE: {result}",
-            "deleted" : "DELETE: Element with id = `{id}` was deleted"
+            "get_all"   : "{operation}: all elements have been returned",
+            "completed" : "{operation}: The operation is completed {result}",
+            "deleted"   : "{operation}: Element with id = `{id}` was deleted"
         },
         "warning" : {
-            "no_result" : "GET: There is no element suitable for {query}"
+            "no_matches" : "{operation}: there are no records matching the query {query}"
         },
         "error" : {
-            "must_be_dict" : "{command}: must be dictionary. Not {typeof}",
-            "nothing_to_push" : "PUSH: nothing to push. Query is empty",
-            "empty_query" : "GET: query is empty",
-            "id_not_specified" : "ID not specified in {data}",
-            "nothing_to_update" : "UPDATE: There is no element suitable for {query}",
-            "id_not_found" : "DELETE: Element with id = `{id}` was not found"
+            "must_be_dict"      : "{operation}: must be dictionary. Not {typeof}",
+            "empty_query"       : "{operation}: query is empty",
+            "id_not_specified"  : "{operation}: ID not specified in {query}",
+            "nothing_to_update" : "{operation}: there is no element suitable for {query}",
+            "id_not_found"      : "{operation}: element with id = `{id}` was not found",
+            "operation_failed"  : "{operation}: the operation could not be performed in the database \n\n{error}"
         }
     }
 }
